...
  icon = <AddCardIcon />,
}: AddSignerCardProps) {
  const { colorMode } = useColorMode();
  const isDarkMode = colorMode === 'dark';
  return (
    <TouchableOpacity
      testID={isAddWallet ? 'btn_add_wallet' : `btn_${name}`}
      activeOpacity={0.95}
      onPress={() => callback(name)}
    >
      <Box
        backgroundColor={`${colorMode}.pantoneGreenLight`}
        borderColor={borderColor ? borderColor : `${colorMode}.pantoneGreen`}
...
