...
  return (
    <Box width={'100%'}>
      <Box style={styles.container}>
        <Box style={styles.leftContainer}>
          {enableBack && (
            <TouchableOpacity
              testID="btn_back"
              onPress={onPressHandler || navigation.goBack}
              style={styles.backButton}
            >
              <ThemedSvg name={'back_Button'} />
            </TouchableOpacity>
          )}
...
