...
  const calculateWalletBalance = (wallet) => {
    const { confirmed, unconfirmed } = wallet.specs.balances;
    return confirmed + unconfirmed;
  };

  return (
    <Box style={styles.valueWrapper} testID="wallet_list">
      <BalanceComponent
        setIsShowAmount={setIsShowAmount}
        isShowAmount={isShowAmount}
        count={allWallets.length}
        balance={totalBalance}
      />
...
