...
              currentPosition === 0 ? pressNext() : dispatch(setWhirlpoolSwiperModal(false))
            }
            testID={`${currentPosition === 0 ? 'next' : 'proceed'}`}
          >
            <Box backgroundColor={`${colorMode}.modalWhiteButton`} style={styles.cta}>
              <Text style={styles.ctaText} color={`${colorMode}.textGreen`} bold>
                {currentPosition === 0 ? 'Next' : 'Proceed'}
              </Text>
            </Box>
          </TouchableOpacity>
        </Box>
      </Box>
    </Box>
...
