...
      dispatch(credsAuthenticated(false));
    }
  }, [isAuthenticated]);
  useEffect(() => {
    if (authenticationFailed && password !== '') {
      setLoginError(true);
      setErrMessage('Incorrect password');
      dispatch(credsAuthenticated(false));
    } else {
      setLoginError(false);
      setErrMessage('');
    }
  }, [authenticationFailed]);
...
