...
            </Box>
            <KeeperModal
              visible={invalidSeedsModal}
              close={closeInvalidSeedsModal}
              title={seed.InvalidSeeds}
              subTitle={seed.seedDescription}
              buttonText="Retry"
              buttonTextColor={`${colorMode}.white`}
              buttonCallback={closeInvalidSeedsModal}
              textColor={`${colorMode}.primaryText`}
              Content={InValidSeedsScreen}
            />
            <KeeperModal
...
