appId: io.hexawallet.keeper
---
- extendedWaitUntil:
    visible: 'Enter your passcode'
    timeout: 20000
- assertNotVisible: 'Proceed'
- tapOn: '1'
- tapOn: '2'
- tapOn: '3'
- tapOn: '7'
- assertVisible: 'Proceed'
- tapOn: 'Proceed'
- waitForAnimationToEnd:
    timeout: 5000
- assertVisible: 'Incorrect password'
- assertNotVisible: 'Proceed'
- assertVisible: 'Retry'
- tapOn: 'Retry'
- tapOn: '1'
- tapOn: '1'
- tapOn: '1'
- tapOn: '1'
- assertVisible: 'Proceed'
- tapOn: 'Proceed'
- waitForAnimationToEnd:
    timeout: 5000
- extendedWaitUntil:
    visible: 'Next'
    timeout: 30000
- tapOn: 'Next'
- waitForAnimationToEnd:
    timeout: 2000
